traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^Snake:31: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:31: warning: enclosing method positionFinale has result type Unit: return value discarded
    return false
    ^